--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,6 +44,7 @@
                 android:background="@color/white"
                 android:elevation="@dimen/_4sdp"
                 android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ToolbarTheme"
                 app:contentInsetStart="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,10 +60,12 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:layout_centerHorizontal="true"
+                        android:fontFamily="@font/opensans_semibold"
                         android:gravity="start"
                         android:text="@{toolbarModel.title}"
                         android:textColor="@color/black"
-                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas)) ? View.GONE : View.VISIBLE}"
+                        android:textSize="16sp"
+                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas) || toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.GONE : View.VISIBLE}"
                         tools:text="Title" />
 
                     <ImageView
@@ -71,7 +74,7 @@
                         android:layout_centerInParent="true"
                         android:padding="@dimen/_5sdp"
                         android:src="@drawable/ic_logo_splash"
-                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas)) ? View.VISIBLE : View.GONE}" />
+                        android:visibility="@{(toolbarModel.title.equalsIgnoreCase(@string/dhaba_mnagement) || toolbarModel.title.equalsIgnoreCase(@string/my_dhabas)|| toolbarModel.title.equalsIgnoreCase(@string/settings)|| toolbarModel.title.equalsIgnoreCase(@string/helpline)) ? View.VISIBLE : View.GONE}" />
 
                 </RelativeLayout>
 
@@ -148,7 +151,7 @@
                     android:padding="@dimen/_10sdp"
                     android:text="@string/privacy_policy"
                     android:textColor="@color/text_privacy_policy"
-                    android:textSize="12sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvTermsConditions"
@@ -159,7 +162,7 @@
                     android:padding="@dimen/_10sdp"
                     android:text="@string/terms_and_conditions"
                     android:textColor="@color/text_privacy_policy"
-                    android:textSize="12sp" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
