--- a/app/src/main/res/layout/dialog_filters.xml
+++ b/app/src/main/res/layout/dialog_filters.xml
@@ -212,8 +212,8 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnContinue"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_height="@dimen/_46sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@drawable/primary_color_btn_selector"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
@@ -226,7 +226,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnReset"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_46sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/default_btn_selector"
                 android:fontFamily="@font/opensans_bold"
@@ -234,7 +234,7 @@
                 android:padding="@dimen/_10sdp"
                 android:text="@string/reset"
                 android:textAllCaps="false"
-                android:textColor="@color/black"
+                android:textColor="@color/colorPrimary"
                 android:textSize="16sp" />
 
         </LinearLayout>
