--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -49,17 +50,57 @@
                 android:layout_height="match_parent"
                 android:padding="@dimen/_15sdp">
 
+                <LinearLayout
+                    android:id="@+id/llMandatoryWarning"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/grey_roundcorners_fofofo"
+                    android:gravity="start"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/fields_with"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text=" * "
+                        android:textColor="@color/colorRed"
+                        android:textSize="14sp"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="@string/asterisk_are_mandatory"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/dhabaNameTil"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:hint="@string/dhaba_name"
                     android:theme="@style/TextLabel"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toBottomOf="@+id/llMandatoryWarning">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edDhabaName"
@@ -566,17 +607,16 @@
 
                     <FrameLayout
                         android:layout_width="0dp"
-                        android:layout_height="@dimen/_130sdp"
+                        android:layout_height="@dimen/_100sdp"
                         android:layout_weight="1">
 
                         <LinearLayout
                             android:id="@+id/llPhotos"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@color/grey_light"
+                            android:background="@drawable/grey_fill_bg"
                             android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="20dp">
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:layout_width="@dimen/_50sdp"
@@ -599,18 +639,17 @@
 
                     <FrameLayout
                         android:layout_width="0dp"
-                        android:layout_height="@dimen/_130sdp"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_height="@dimen/_100sdp"
+                        android:layout_marginLeft="@dimen/_15sdp"
                         android:layout_weight="1">
 
                         <LinearLayout
                             android:id="@+id/llVideoPicker"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@color/grey_light"
+                            android:background="@drawable/grey_fill_bg"
                             android:gravity="center"
-                            android:orientation="vertical"
-                            android:padding="20dp">
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:layout_width="@dimen/_50sdp"
@@ -676,8 +715,8 @@
                     android:id="@+id/flHoardingPic"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_130sdp"
-                    android:layout_marginTop="@dimen/_15sdp"
-                    android:background="@color/grey_light"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/grey_fill_bg"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recyclerViewDhabaPics">
@@ -722,14 +761,14 @@
                         android:layout_marginRight="@dimen/_10sdp"
                         android:text="*"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="20sp" />
+                        android:textSize="28sp" />
 
                 </FrameLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnNext"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:background="@drawable/primary_color_btn_selector"
                     android:fontFamily="@font/opensans_bold"
@@ -747,7 +786,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/btnSaveDraft"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_marginBottom="@dimen/_30sdp"
                     android:fontFamily="@font/opensans_bold"
