--- a/app/src/main/res/layout/fragment_light_amenities.xml
+++ b/app/src/main/res/layout/fragment_light_amenities.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/frameTowerPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_130sdp"
-                    android:background="@color/grey_light"
+                    android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}"
                     android:visibility="@{rbTowerYes.checked ? View.VISIBLE : View.GONE}">
 
@@ -170,7 +170,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/grey_light"
+                        android:background="@drawable/grey_fill_bg"
                         android:gravity="center"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -246,7 +246,7 @@
                 <Button
                     android:id="@+id/btnSaveDhaba"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginVertical="@dimen/_20sdp"
                     android:background="@drawable/primary_color_btn_selector"
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
