--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -210,7 +210,7 @@
                     android:id="@+id/llLicensePhoto"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_150sdp"
-                    android:background="@color/grey_light"
+                    android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}"
                     android:visibility="@{rbPoliceVerificationYes.checked ? View.VISIBLE : View.GONE}">
 
@@ -332,7 +332,7 @@
                     android:id="@+id/frameIndoorCamera"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/grey_light"
+                    android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}"
                     android:visibility="@{rbIndoorCameraYes.checked ? View.VISIBLE : View.GONE}">
 
@@ -462,7 +462,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/grey_light"
+                        android:background="@drawable/grey_fill_bg"
                         android:gravity="center"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -502,7 +502,7 @@
                 <Button
                     android:id="@+id/btnSaveDhaba"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginVertical="@dimen/_20sdp"
                     android:background="@drawable/primary_color_btn_selector"
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
