--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,14 +6,15 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/settingsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/settings"
             android:textColor="@color/black"
@@ -22,7 +23,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_15sdp"
+            android:layout_marginHorizontal="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_30sdp"
             android:elevation="@dimen/_3sdp"
             app:cardBackgroundColor="@color/white">
 
@@ -40,7 +42,8 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_12sdp">
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:paddingStart="@dimen/_15sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon"
@@ -61,16 +64,18 @@
                         android:textSize="18sp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:padding="@dimen/_10sdp"
+                        android:src="@drawable/ic_arrow_settings" />
                 </LinearLayout>
 
                 <View
                     android:id="@+id/divider1"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:background="@color/colorGrey1" />
+                    android:layout_height="1dp"
+                    android:background="@color/grey_divider_theme" />
 
                 <LinearLayout
                     android:id="@+id/llLanguage"
@@ -78,7 +83,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_12sdp">
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:paddingStart="@dimen/_15sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon1"
@@ -114,17 +120,19 @@
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:padding="@dimen/_10sdp"
+                        android:src="@drawable/ic_arrow_settings" />
                 </LinearLayout>
 
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:background="@color/colorGrey1" />
+                    android:layout_height="1dp"
+                    android:background="@color/grey_divider_theme" />
 
                 <LinearLayout
                     android:id="@+id/llLogout"
@@ -135,7 +143,8 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/_12sdp">
+                    android:paddingVertical="@dimen/_15sdp"
+                    android:paddingStart="@dimen/_15sdp">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/icon3"
@@ -156,9 +165,11 @@
                         android:textSize="18sp" />
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_right" />
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:layout_marginRight="@dimen/_5sdp"
+                        android:padding="@dimen/_10sdp"
+                        android:src="@drawable/ic_arrow_settings" />
                 </LinearLayout>
 
 
