--- a/app/src/main/res/layout/fragment_sleeping_amenities.xml
+++ b/app/src/main/res/layout/fragment_sleeping_amenities.xml
@@ -131,7 +131,7 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_130sdp"
-                    android:background="@color/grey_light"
+                    android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}"
                     android:visibility="@{rbBedCharpaiYes.checked ? View.VISIBLE : View.GONE}">
 
@@ -380,7 +380,7 @@
                 <Button
                     android:id="@+id/btnSaveDhaba"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginVertical="@dimen/_20sdp"
                     android:background="@drawable/primary_color_btn_selector"
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
