--- a/app/src/main/res/layout/fragment_washroom_amenities.xml
+++ b/app/src/main/res/layout/fragment_washroom_amenities.xml
@@ -161,7 +161,7 @@
                     android:layout_width="match_parent"
                     android:clickable="@{!viewOnly}"
                     android:layout_height="wrap_content"
-                    android:background="@color/grey_light">
+                    android:background="@drawable/grey_fill_bg">
 
                     <LinearLayout
                         android:id="@+id/llWashroomPhoto"
@@ -199,7 +199,7 @@
                 <Button
                     android:id="@+id/btnSaveDhaba"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_46sdp"
                     android:layout_marginVertical="@dimen/_20sdp"
                     android:background="@drawable/primary_color_btn_selector"
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
