--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,5 +35,6 @@
     <color name="grey_view_dhaba">#636363</color>
     <color name="grey_aaaaaa">#AAAAAA</color>
     <color name="grey_divider_theme">#D4D3D4</color>
+    <color name="greyImgBackground">#F5F5F5</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#D4D3D4</color>
 </resources>
